examples/test/testpolicy8722.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8722
  namespace: namespace92
spec:
  podSelector:
    matchLabels:
      key44: value43
      key46: value26
      key10: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value25
          key45: value8
      podSelector:
        matchLabels:
          key3: value27
          key8: value46
